--- a/Frontend/I-nexus/src/app/header/header.component.html
+++ b/Frontend/I-nexus/src/app/header/header.component.html
@@ -4,22 +4,20 @@
             <a class="navbar-brand" href="#">𝗡ɇxᶹ𝚜</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">AboutUs</a></li>
-            <li><a href="#">ContactUs</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Categories</a></li>
+            <li class="active"><a routerLink="/aboutus">AboutUs</a></li>
+            <li><a routerLink="/contactus">ContactUs</a></li>
+            <li><a routerLink="/categories">Categories</a></li>
+            <li><a routerLink="/products">Products</a></li>
         </ul>
         <form class="navbar-form navbar-left" action="/action_page.php">
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search" name="search">
             </div>
             <button type="submit" class="btn btn-default" style="margin-right: 10px;">Search</button>
-            <button type="submit" class="btn btn-default" style="margin-right: 10px;">Login</button>
-            <button type="submit" class="btn btn-default" style="margin-right: 10px;"  >Register</button>
-            <button type="submit" class="btn btn-default" style="margin-right: 10px;">Cart</button>
-            <button type="submit" class="btn btn-default"  >LogOut</button>
+            <button type="button" class="btn btn-default" style="margin-right: 10px;" routerLink="/login">Login</button>
+            <button type="button" class="btn btn-default" style="margin-right: 10px;" routerLink="/register">Register</button>
+            <button type="button" class="btn btn-default" style="margin-right: 10px;" routerLink="/cart">Cart</button>
+            <button type="button" class="btn btn-default" routerLink="/logout">LogOut</button>
         </form>
     </div>
 </nav>
- 
