--- a/Frontend/I-nexus/src/app/login/login.component.html
+++ b/Frontend/I-nexus/src/app/login/login.component.html
@@ -1,1 +1,72 @@
-<p>login works!</p>
+<title>Login Form</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <style>
+    .login-container {
+      max-width: 500px;
+      margin: 50px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
+    }
+    .login-title {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #333;
+    }
+    .form-group {
+      margin-bottom: 20px;
+    }
+    .form-control {
+      height: 45px;
+      border-radius: 5px;
+    }
+    .btn-primary {
+      width: 100%;
+      height: 45px;
+      border-radius: 5px;
+      background-color: #337ab7;
+      border-color: #337ab7;
+    }
+    .btn-primary:hover {
+      background-color: #286090;
+      border-color: #204d74;
+    }
+    .alert {
+      margin-top: 20px;
+    }
+    .signup-link {
+      display: inline-block;
+      margin-top: 10px;
+    }
+  </style>
+
+
+  <div class="container login-container">
+    <h2 class="login-title">Login Form</h2>
+    <form #loginForm="ngForm" (ngSubmit)="loginSubmit(loginForm.value)" novalidate>
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <input class="form-control" type="text" name="emailId" ngModel #emailId="ngModel" required email minlength="2" maxlength="30" placeholder="Email Id" />
+        </div>
+        <div *ngIf="emailId.errors?.['required'] && emailId.touched" class="alert alert-danger">Please Enter EmailId</div>
+        <div *ngIf="emailId.errors?.['email'] && emailId.touched" class="alert alert-danger">Invalid Email Format</div>
+        <div *ngIf="emailId.errors?.['minlength'] && emailId.touched" class="alert alert-danger">Enter At least 2 Characters for EmailId</div>
+      </div>
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <input class="form-control" type="password" name="password" ngModel #password="ngModel" required minlength="6" maxlength="10" placeholder="Password"/>
+        </div>
+        <div *ngIf="password.errors?.['required'] && password.touched" class="alert alert-danger">Please Enter Password</div>
+        <div *ngIf="password.errors?.['minlength'] && password.touched" class="alert alert-danger">Enter At least 6 Characters for Password</div>
+      </div>
+      <button [disabled]="!loginForm.valid" class="btn btn-primary">Login</button>
+      <div class="signup-link">
+        New User? <a routerLink="/register">Sign Up</a>
+      </div>
+    </form>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
