--- a/Frontend/I-nexus/src/app/app.component.html
+++ b/Frontend/I-nexus/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-register></app-register>
-<app-login></app-login>
+<!-- <app-register></app-register> -->
+<!-- <app-login></app-login> -->
 <app-header></app-header>
-<app-aboutus></app-aboutus>
+<!-- <app-aboutus></app-aboutus> -->
+<router-outlet></router-outlet>
