--- a/Frontend/I-nexus/src/app/register/register.component.html
+++ b/Frontend/I-nexus/src/app/register/register.component.html
@@ -1,48 +1,44 @@
-<div class="hello">
-    <head>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    </head>
-    <br/>
-    <div class="container">
-      <h2>Register Form</h2>
-      <form #registerForm="ngForm" (ngSubmit)="registerSubmit(registerForm)" novalidate>
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input class="form-control" type="text" name="fullName" ngModel #fullName="ngModel" required minlength="2" maxlength="30" placeholder="Full Name"/>
-        </div>
-        <div *ngIf="fullName?.errors?.['required'] && fullName.touched" class="error-message">Enter Full Name</div>
-        <div *ngIf="fullName?.errors?.['minlength'] && fullName.touched" class="error-message">Enter At least 2 Characters</div>
-  
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-          <input class="form-control" type="text" name="mobileNumber" ngModel #mobileNumber="ngModel" required minlength="10" maxlength="10" placeholder="Mobile Number"/>
-        </div>
-        <div *ngIf="mobileNumber?.errors?.['required'] && mobileNumber.touched" class="error-message">Enter Mobile Number</div>
-        <div *ngIf="mobileNumber?.errors?.['minlength'] && mobileNumber.touched" class="error-message">Enter 10 Characters</div>
-  
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input class="form-control" type="email" name="emailId" ngModel #emailId="ngModel" required placeholder="Email ID"/>
-        </div>
-        <div *ngIf="emailId?.errors?.['required'] && emailId.touched" class="error-message">Enter Email ID</div>
-  
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password" name="password" ngModel #password="ngModel" required minlength="6" maxlength="30" placeholder="Password"/>
-        </div>
-        <div *ngIf="password?.errors?.['required'] && password.touched" class="error-message">Enter Password</div>
-        <div *ngIf="password?.errors?.['minlength'] && password.touched" class="error-message">Enter At least 6 Characters</div>
-  
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password" name="confirmPassword" ngModel #confirmPassword="ngModel" required minlength="6" maxlength="30" placeholder="Confirm Password"/>
-        </div>
-        <div *ngIf="confirmPassword?.errors?.['required'] && confirmPassword.touched" class="error-message">Confirm Password is required</div>
-        <div *ngIf="confirmPassword?.errors?.['minlength'] && confirmPassword.touched" class="error-message">Confirm Password should be at least 6 characters</div>
-        <div *ngIf="confirmPassword?.touched && confirmPassword?.value !== password?.value" class="error-message">Passwords do not match</div>
-  
-        <button [disabled]="!registerForm.valid" class="btn btn-primary">Register</button>
-      </form>
-    </div>
-  </div>
-  
+<!-- src/app/register/register.component.html -->
+<div class="form-container">
+  <form #regForm="ngForm" (ngSubmit)="registerSubmit(regForm.value)">
+    <h2 align="center">Registration Form</h2>
+    <table align="center">
+      <tbody>
+        <tr>
+          <td>Enter UserName</td>
+          <td><input type="text" name="userName" ngModel/></td>
+        </tr>
+        <tr>
+          <td>Select Country</td>
+          <td>
+            <select name="country" ngModel>
+              <option value="" selected>Select Country</option>
+              <option *ngFor="let country of countries" [value]="country.cca3">
+                {{ country.name.common }}
+              </option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td>Enter EmailId</td>
+          <td><input type="text" name="emailId" ngModel/></td>
+        </tr>
+        <tr>
+          <td>Enter Password</td>
+          <td><input type="password" name="password" ngModel /></td>
+        </tr>
+        <tr>
+          <td>Enter Phone Number</td>
+          <td><input type="text" name="phoneNumber" ngModel /></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <button class="btn btn-primary">Register</button>
+            Already User? <a routerLink="/login">SignIn</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>   
+  </form>
+</div>
