--- a/Frontend/I-nexus/src/app/login/login.component.html
+++ b/Frontend/I-nexus/src/app/login/login.component.html
@@ -65,6 +65,8 @@
       <button [disabled]="!loginForm.valid" class="btn btn-primary">Login</button>
       <div class="signup-link">
         New User? <a routerLink="/register">Sign Up</a>
+      </div><div class="forgotpassword-link">
+         <a routerLink="/forgotpassword">Forgot Password?</a>
       </div>
     </form>
   </div>
