--- a/Frontend/I-nexus/src/app/products/products.component.html
+++ b/Frontend/I-nexus/src/app/products/products.component.html
@@ -1,1 +1,5 @@
-<p>products works!</p>
+<div class="container">
+    <h2>Products Page</h2>
+    <!-- Add your products content here -->
+  </div>
+  
