forget password,configuration,otp

--- a/Frontend/I-nexus/src/app/app.component.html
+++ b/Frontend/I-nexus/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!-- <app-register></app-register> -->
 <!-- <app-login></app-login> -->
 <app-header></app-header>
+<app-logout></app-logout>
 <!-- <app-aboutus></app-aboutus> -->
  <router-outlet></router-outlet>
+  
+ 
