--- a/Frontend/I-nexus/src/app/header/header.component.html
+++ b/Frontend/I-nexus/src/app/header/header.component.html
@@ -1,25 +1,24 @@
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">𝗡ɇxᶹ𝚜</a>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">𝗡ɇxᶹ𝚜</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a routerLink="/" style="margin-right: 30px;">Home</a></li>
+        <!--<li><a routerLink="/aboutus" style="margin-right: 30px;">AboutUs</a></li>-->
+        <li><a routerLink="/categories" style="margin-right: 30px;">Categories</a></li>
+        <li><a routerLink="/products" style="margin-right: 30px;">Products</a></li>
+      </ul>
+      <form class="navbar-form navbar-left" action="/action_page.php">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search" name="search">
         </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a routerLink="/"style="margin-right: 30px;">Home</a></li>
-
-            <li ><a routerLink="/aboutus"style="margin-right: 30px;">AboutUs</a></li>
-            <li><a routerLink="/contactus"style="margin-right: 30px;">ContactUs</a></li>
-            <li><a routerLink="/categories"style="margin-right: 30px;">Categories</a></li>
-            <li><a routerLink="/products"style="margin-right: 30px;">Products</a></li>
-        </ul>
-        <form class="navbar-form navbar-left" action="/action_page.php">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search" name="search">
-            </div>
-            <button type="submit" class="btn btn-default" style="margin-right: 30px;">Search</button>
-            <button type="button" class="btn btn-default" style="margin-right: 30px;" routerLink="/login">Login</button>
-            <button type="button" class="btn btn-default" style="margin-right: 30px;" routerLink="/register">Register</button>
-            <button type="button" class="btn btn-default" style="margin-right: 30px;" routerLink="/cart">Cart</button>
-            <button type="button" class="btn btn-default" style="margin-right: 30px;" routerLink="/logout">LogOut</button>
-        </form>
+        <button type="submit" class="btn btn-default">Search</button>
+        <button type="button" class="btn btn-default" routerLink="/login">Login</button>
+        <!--<button type="button" class="btn btn-default" routerLink="/register">Register</button>-->
+        <button type="button" class="btn btn-default" routerLink="/cart">Cart</button>
+        <button type="button" class="btn btn-default" routerLink="/logout">LogOut</button>
+      </form>
     </div>
-</nav>
+  </nav>
