--- a/Frontend/I-nexus/src/app/register/register.component.html
+++ b/Frontend/I-nexus/src/app/register/register.component.html
@@ -1,44 +1,189 @@
-<!-- src/app/register/register.component.html -->
-<div class="form-container">
-  <form #regForm="ngForm" (ngSubmit)="registerSubmit(regForm.value)">
-    <h2 align="center">Registration Form</h2>
-    <table align="center">
-      <tbody>
-        <tr>
-          <td>Enter UserName</td>
-          <td><input type="text" name="userName" ngModel/></td>
-        </tr>
-        <tr>
-          <td>Select Country</td>
-          <td>
-            <select name="country" ngModel>
-              <option value="" selected>Select Country</option>
-              <option *ngFor="let country of countries" [value]="country.cca3">
-                {{ country.name.common }}
-              </option>
-            </select>
-          </td>
-        </tr>
-        <tr>
-          <td>Enter EmailId</td>
-          <td><input type="text" name="emailId" ngModel/></td>
-        </tr>
-        <tr>
-          <td>Enter Password</td>
-          <td><input type="password" name="password" ngModel /></td>
-        </tr>
-        <tr>
-          <td>Enter Phone Number</td>
-          <td><input type="text" name="phoneNumber" ngModel /></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>
-            <button class="btn btn-primary">Register</button>
-            Already User? <a routerLink="/login">SignIn</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>   
-  </form>
-</div>
+<body>
+  <div class="form-container">
+    <form #regForm="ngForm" (ngSubmit)="registerSubmit(regForm.value)">
+      <h2 align="center" >Registration Form</h2>
+      <table align="center">
+        <tbody>
+          <!-- UserName Field -->
+          <tr>
+            <td>UserName :</td>
+            <td>
+              <!-- Input for UserName, required validation -->
+              <input
+                type="text"
+                name="userName"
+                ngModel
+                class="form-control"
+                required
+              />
+              <!-- Error message if UserName is not provided -->
+              <div
+                *ngIf="regForm.submitted && regForm.controls['userName']?.errors?.['required']"
+              >
+                <p class="text-danger">Enter User Name</p>
+              </div>
+            </td>
+          </tr>
+
+          <!-- Country Selection Field -->
+          <tr>
+            <td>Select Country :</td>
+            <td>
+              <select name="country" ngModel class="form-control" required>
+                <option value="" selected disabled>Select Country</option>
+                <option
+                  *ngFor="let country of countries"
+                  [value]="country.cca3"
+                >
+                  {{ country.name.common }}
+                </option>
+              </select>
+              <div
+                *ngIf="regForm.submitted && regForm.controls['country']?.errors?.['required']"
+              >
+                <p class="text-danger">Select a Country</p>
+              </div>
+            </td>
+          </tr>
+
+          <!-- Phone Number Field -->
+          <tr>
+            <td>Phone Number :</td>
+            <td>
+              <input
+                type="tel"
+                id="phoneNumber"
+                name="phoneNumber"
+                class="form-control"
+                ngModel
+                #phoneNumber="ngModel"
+                required
+                pattern="[6789][0-9]{9}"
+                placeholder="Enter Phone Number"
+              />
+              <div
+                *ngIf="phoneNumber.errors?.['required'] && (phoneNumber.touched || regForm.submitted)"
+              >
+                <p class="text-danger">Enter Phone Number</p>
+              </div>
+              <div
+                *ngIf="phoneNumber.errors?.['pattern'] && (phoneNumber.touched || regForm.submitted)"
+              >
+                <p class="text-danger">
+                  Phone Number must be 10 digits and start with 6-9
+                </p>
+              </div>
+            </td>
+          </tr>
+
+          <!-- Email ID Field -->
+
+          <tr>
+            <td>EmailId :</td>
+            <td>
+              <input
+                type="email"
+                id="emailId"
+                name="emailId"
+                class="form-control"
+                ngModel
+                #emailId="ngModel"
+                required
+                pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$|^@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                placeholder="Enter EmailId"
+              />
+              <div
+                *ngIf="emailId.errors?.['required'] && (emailId.touched || regForm.submitted)"
+              >
+                <p class="text-danger">Enter EmailId</p>
+              </div>
+              <div
+                *ngIf="emailId.errors?.['pattern'] && (emailId.touched || regForm.submitted)"
+              >
+                <p class="text-danger">
+                  Email should contain only lowercase letters and be in the
+                  format 'example&#64;gmail.com
+                </p>
+              </div>
+            </td>
+          </tr>
+
+          <!-- Password Field' -->
+          <tr>
+            <td>Password :</td>
+            <td>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                class="form-control"
+                ngModel
+                #password="ngModel"
+                required
+                minlength="8"
+                pattern="^(?=.[0-9])(?=.[a-zA-Z])(?=.*[@#$%^&+=])(?=\S+$).{8,}$"
+                placeholder="Enter Password"
+              />
+              <div
+                *ngIf="password.errors?.['required'] && (password.touched || regForm.submitted)"
+              >
+                <p class="text-danger">Enter Password</p>
+              </div>
+              <div
+                *ngIf="password.errors?.['minlength'] && (password.touched || regForm.submitted)"
+              >
+                <p class="text-danger">
+                  Password must be at least 8 characters
+                </p>
+              </div>
+              <div
+                *ngIf="password.errors?.['pattern'] && (password.touched || regForm.submitted)"
+              >
+                <p class="text-danger">
+                  Password must include at least one lowercase letter, one
+                  uppercase letter, one number, and one special character
+                </p>
+              </div>
+            </td>
+          </tr>
+          <!-- Password Confirmation Field -->
+          <tr>
+            <td>Re-Enter Password :</td>
+            <td>
+              <input
+                type="password"
+                name="passwordConfirmation"
+                class="form-control"
+                ngModel
+                #passwordConfirmation="ngModel"
+                required
+                [pattern]="password.value"
+                placeholder="Re-Enter Password"
+              />
+              <div
+                *ngIf="passwordConfirmation.errors?.['required'] && (passwordConfirmation.touched || regForm.submitted)"
+              >
+                <p class="text-danger">Re-enter Password</p>
+              </div>
+              <div
+                *ngIf="passwordConfirmation.errors?.['pattern'] && (passwordConfirmation.touched || regForm.submitted)"
+              >
+                <p class="text-danger">Passwords do not match</p>
+              </div>
+            </td>
+          </tr>
+
+          <!-- Form Actions -->
+          <tr>
+            <td colspan="2">
+              <div class="form-actions">
+                <button type="submit" class="btn btn-primary">Register</button>
+                <span>Already User? <a routerLink="/login">SignIn</a></span>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </form>
+  </div>
+</body>
