admin service addede

--- a/Frontend/I-nexus/src/app/app.component.html
+++ b/Frontend/I-nexus/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- <app-register></app-register> -->
 <!-- <app-login></app-login> -->
 <app-header></app-header>
+<nav>
+   <a routerLink="/phones">Phones</a>
+   <a routerLink="/wishlist">Wishlist</a>
+ </nav>
 <!-- <app-aboutus></app-aboutus> -->
  <router-outlet></router-outlet>
   
