--- a/Frontend/I-nexus/src/app/home/home.component.html
+++ b/Frontend/I-nexus/src/app/home/home.component.html
@@ -125,11 +125,11 @@
         </div>
     </section>
 
-    <footer>
+    <!-- <footer>
         <div class="container">
             <p>&copy; 2024 Your Website Name. All rights reserved.</p>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
